--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -1,21 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="105dp">
+    android:layout_height="115dp"
+    >
+
+<!--    android:layout_height="105dp"-->
+<!--    android:backgroundTint="@color/purple_200"-->
+<!--    android:padding="50dp"-->
+<!--    app:cardCornerRadius="30dp">-->
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="115dp"
+        android:padding="10dp"
+        android:backgroundTint="@color/purple_200"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="30dp">
+
+
+
 
 
     <TextView
         android:layout_width="200dp"
         android:id="@+id/userEmail"
         android:textSize="16sp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="25dp"
         android:text="User Email"
         android:textColor="@color/black"
         android:layout_marginEnd="20dp"
         android:maxLines="1"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="35dp"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:text="User ID"
+        android:layout_marginStart="25dp"
+        android:id="@+id/userIdPlace"
+        />
+    </androidx.cardview.widget.CardView>
+
 
 
 </RelativeLayout>
